working in groups is hard

--- a/movies.ipynb
+++ b/movies.ipynb
@@ -854,7 +854,7 @@
    "outputs": [],
    "source": [
     "movie_data['genre_2'] = movie_data['genre_2'].replace({'Music':'Musical','romance':'Romance'})\n",
-    "movie_data['genre_3'] = movie_data['genre_3'].replace({'Music':'Musical'})"
+    "movie_data['genre_3'] = movie_data['genre_3'].replace({'Music':'Musical'})\n"
    ]
   },
   {
@@ -864,7 +864,8 @@
    "outputs": [],
    "source": [
     "movie_data['worldwide_profit'] = movie_data['worldwide_gross'] - movie_data['film_budget']\n",
-    "movie_data['domestic_profit'] = movie_data['domestic_gross'] - movie_data['film_budget']"
+    "movie_data['domestic_profit'] = movie_data['domestic_gross'] - movie_data['film_budget']\n",
+    "movie_data['genres'] = movie_data[['genre_1', 'genre_2', 'genre_3']].apply(lambda x: ', '.join(x.dropna()), axis=1)"
    ]
   },
   {
@@ -1084,6 +1085,13 @@
     "# Close the database connection\n",
     "conn.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
