--- a/movies.ipynb
+++ b/movies.ipynb
@@ -854,7 +854,7 @@
    "outputs": [],
    "source": [
     "movie_data['genre_2'] = movie_data['genre_2'].replace({'Music':'Musical','romance':'Romance'})\n",
-    "movie_data['genre_3'] = movie_data['genre_3'].replace({'Music':'Musical'})\n"
+    "movie_data['genre_3'] = movie_data['genre_3'].replace({'Music':'Musical'})"
    ]
   },
   {
@@ -864,8 +864,7 @@
    "outputs": [],
    "source": [
     "movie_data['worldwide_profit'] = movie_data['worldwide_gross'] - movie_data['film_budget']\n",
-    "movie_data['domestic_profit'] = movie_data['domestic_gross'] - movie_data['film_budget']\n",
-    "movie_data['genres'] = movie_data[['genre_1', 'genre_2', 'genre_3']].apply(lambda x: ', '.join(x.dropna()), axis=1)"
+    "movie_data['domestic_profit'] = movie_data['domestic_gross'] - movie_data['film_budget']"
    ]
   },
   {
